/****************************************************

	文件：
	作者：WWS
	日期：2023/04/10 20:05:40
	功能：AnimatorPara动画器的参数汇总

*****************************************************/

using UnityEngine;

public static class AnimatorPara
{
    public const string LookX = "LookX";
    public const string LookY = "LookY";
    public const string LookDirX = "LookDirX";
    public const string LookDirY = "LookDirY";
    public const string MoveState = "MoveState";
    public const string Hit = "Hit";
    public const string Die = "Die";
    public const string MoveValue = "MoveValue";
    public const string Attack = "Attack";
    public const string Skill = "Skill";
    public const string Defend = "Defend";
    public const string Quit = "Quit";
}
